# final

./: .env.example  .gitignore  README.md  command_for_services.ps1  docker-compose.yml
services/admin_panel/: .env.example  Dockerfile  admin_panel.db  main.py  models.py  pyproject.toml
services/admin_panel/alembic/: env.py
services/auth/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
services/auth/alembic/: env.py
services/auth/alembic/versions/: e30f2e560cb5_init.py
services/auth/core/: config.py  rabbit.py  security.py
services/auth/crud/: team.py  user.py
services/auth/models/: team.py  user.py
services/auth/routers/: admin.py  auth.py  user.py
services/auth/schemas/: team.py  user.py
services/auth/tests/: test_health.py
services/calendar/: .env.example  main.py  pyproject.toml
services/calendar/alembic/versions/: 202407041240_add_owner_team_columns.py  e30f2e560cb5_init.py
services/calendar/crud/: __init__.py
services/calendar/models/: __init__.py
services/calendar/routers/: __init__.py  calendar.py
services/calendar/schemas/: __init__.py
services/meetings/: .env.example  main.py  pyproject.toml
services/meetings/alembic/versions/: 202407041200_meetings_tables.py  983e89f799ce_auto_migration.py
services/meetings/crud/: __init__.py
services/meetings/models/: __init__.py
services/meetings/routers/: __init__.py  meetings.py
services/meetings/schemas/: __init__.py
services/motivation/: .env.example  Dockerfile  main.py  pyproject.toml
services/motivation/alembic/versions/: 083f32fd8826_auto_migration.py  202507071540_create_ratings_table.py
services/motivation/crud/: __init__.py  rating.py
services/motivation/models/: __init__.py
services/motivation/routers/: __init__.py  motivation.py
services/motivation/schemas/: __init__.py
services/org_structure/: .env.example  main.py  pyproject.toml
services/org_structure/alembic/versions/: c783524d40b2_auto_migration.py
services/org_structure/crud/: org_structure.py
services/org_structure/models/: org_structure.py
services/org_structure/routers/: org_structure.py
services/org_structure/schemas/: org_structure.py
services/tasks/: .dockerignore  .env.example  main.py  pyproject.toml
services/tasks/alembic/: env.py
services/tasks/alembic/versions/: 202407041215_task_comments.py  202507071535_due_date_timestamptz.py  2c8bc081497c_auto_migration.py
services/tasks/crud/: comment.py  task.py
services/tasks/models/: comment.py  task.py
services/tasks/routers/: tasks.py
services/tasks/schemas/: task.py
services/team/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
services/team/alembic/: env.py
services/team/alembic/versions/: 202407041225_news_table.py  202507071415_users_table.py  3245c3370f2f_init.py
services/team/core/: config.py
services/team/crud/: news.py  team.py  user.py
services/team/models/: __init__.py  news.py  team.py  user.py
services/team/routers/: __init__.py  news.py  team.py  user.py
services/team/schemas/: news.py  team.py  user.py
services/team/tests/: test_root.py  test_team_endpoints.py
