[tool.poetry]
name = "admin-panel-service"
version = "0.1.0"
description = "Administrative panel microservice using SQLAdmin"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqladmin = "^0.16.0"
SQLAlchemy = "^2.0.29"
pydantic = "^2.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
wtforms = "^3.1.2"
itsdangerous = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
