   [tool.poetry]
   name = "team"
   version = "0.1.0"
   description = ""
   authors = ["Your Name <you@example.com>"]
   package-mode = false

   [tool.poetry.dependencies]
   python = "^3.11"
   fastapi = "^0.110.0"
   uvicorn = "^0.29.0"
   sqlalchemy = "^2.0.0"
   asyncpg = "^0.29.0"
   pydantic = "^2.0.0"
   pydantic-settings = "^2.0.0"

   [build-system]
   requires = ["poetry-core"]
   build-backend = "poetry.core.masonry.api"