   [tool.poetry]
   name = "team"
   version = "0.1.0"
   description = ""
   authors = ["Your Name <you@example.com>"]
   package-mode = false

   [tool.poetry.dependencies]
   python = "^3.11"
   fastapi = "^0.110.0"
   uvicorn = "^0.29.0"
   sqlalchemy = "^2.0.0"
   asyncpg = "^0.29.0"
   pydantic = {extras = ["email"], version = "^2.11.7"}
   pydantic-settings = "^2.0.0"
   alembic = "^1.13.1"
   python-dotenv = "^1.0.1"
   psycopg2-binary = "^2.9.9"
   faststream = {extras = ["rabbit"], version = "^0.5.43"}
   loguru = "^0.7.3"

   [build-system]
   requires = ["poetry-core"]
   build-backend = "poetry.core.masonry.api"